--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Cyber Shop</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -31,13 +31,15 @@
     <header class="header">
       <div class="container d-flex justify-content-between">
         <div class="header-logo">
-          <img src="./assets/images/image 3.png" alt="" />
+          <img src="./assets/images/image 3 .png" alt="" />
         </div>
         <div class="header-content">
           <ul class="d-flex justify-content-around">
             <li>
-              <img src="./assets/images/image 8 (1).png" alt="" />
-              <span>(1)</span>
+              <a href=""
+                ><img src="./assets/images/image 8 (1).png" alt="" />
+                <span>(1)</span></a
+              >
             </li>
 
             <li><a href="">Login</a></li>
@@ -46,11 +48,104 @@
         </div>
       </div>
     </header>
-    <section class="menu"></section>
-    <section class="carousel"></section>
-    <section class="product-feature"></section>
+    <section class="menu">
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Men</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Woman</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kid</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sport</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <section class="carousel">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="true"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container d-flex align-items-center">
+              <div class="items-left">
+                <img src="./assets/images/image 4.png" alt="" />
+              </div>
+              <div class="items-right">
+                <h2>Product Name</h2>
+                <h4>Product Description</h4>
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+    <section class="product-feature">
+      <div class="container">
+        <h3 class="text-center">Product Feature</h3>
+        <div
+          id="product-list"
+          class="product-items d-flex flex-wrap justify-content-between"
+        ></div>
+      </div>
+    </section>
     <footer class="footer">
-      <img src="./assets/images/image 8.png" alt="">
+      <img src="./assets/images/image 8.png" alt="" />
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
@@ -64,5 +159,16 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+    <!-- axios -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"
+      integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- module.js -->
+    <script src="./models/product.js"></script>
+    <!-- index.js -->
+    <script type="module" src="./controller/index.js"></script>
   </body>
 </html>
