--- a/details.html
+++ b/details.html
@@ -1,21 +1,189 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Title</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS v5.2.0-beta1 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <!-- font awsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- main.css -->
-    <link rel="stylesheet" href="./assets/style/main.css">
+    <link rel="stylesheet" href="./assets/style/main.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container d-flex justify-content-between">
+        <div class="header-logo">
+          <img src="./assets/images/image 3 .png" alt="" />
+        </div>
+        <div class="header-content">
+          <ul class="d-flex justify-content-around">
+            <li>
+              <a href=""
+                ><img src="./assets/images/image 8 (1).png" alt="" />
+                <span>(1)</span></a
+              >
+            </li>
 
+            <li><a href="">Login</a></li>
+            <li><a href="">Register</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <section class="menu">
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Men</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Woman</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kid</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sport</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <section class="product-detail">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="detail-img">
+          <img id="prod-img" src="" alt="..." class="w-100" />
+        </div>
+        <div class="detail-content">
+          <h3 id="prod-name" class="fs-1"></h3>
+          <p id="prod-desc" class="fs-2 fw-light"></p>
+          <p class="fs-1 text-success">Available Size</p>
+          <div id="prod-size" class="my-3 d-flex justify-content-between w-50"></div>
+          <span id="prod-price" class="fs-1"></span>
+          <div class="number-prod">
+            <button class="fs-1 px-4 btn btn-secondary">-</button>
+            <span id="number" class="fs-1 mt-3 mx-4">1</span>
+            <button class="fs-1 px-4 btn btn-secondary">+</button>
+          </div>
+          <a class="btn btn-warning fs-1">Add to cart</a>
+        </div>
+      </div>
+    </section>
+    <section class="product-feature">
+      <div class="container">
+        <h3 class="text-center">Product Feature</h3>
+        <div
+          id="product-list"
+          class="product-items d-flex flex-wrap justify-content-between"
+        ></div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-up">
+        <div class="container d-flex justify-content-between">
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">GET HELP</h3>
+            <div class="footer-list d-flex flex-column">
+              <a href="">Contact Us</a>
+              <a href="">Shopping</a>
+              <a href="">NIKEiD</a>
+              <a href="">NIKE +</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">ORDERS</h3>
+            <div class="footer-list d-flex flex-column">
+              <a href="">Payment options</a>
+              <a href="">Shipping and delivery</a>
+              <a href="">Returns</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">REGISTER</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>
+                Create one account to manage everything you do with NIKE, from
+                your shopping preferences to your NIKE + activity.
+              </p>
+              <a href="" class="btn1">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-down">
+        <div class="container d-flex justify-content-between">
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">EMAIL SIGN UP</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>
+                Be the first to know about know products and special offers.
+              </p>
+              <a href="" class="btn1">Sign up now</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">GIFT CARDS</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>Give the gift that alway fits.</p>
+              <a href="" class="btn1">View cards</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">STORE NEAR YOU</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>Locate a NIKE retail store or authorized retailer.</p>
+              <a href="" class="btn1">Search</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+      integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+      crossorigin="anonymous"
+    ></script>
+    <!-- axios -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"
+      integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- module.js -->
+    <script src="./models/product.js"></script>
+    <!-- index.js -->
+    <script type="module" src="./controller/detail.js"></script>
   </body>
 </html>
