--- a/index.html
+++ b/index.html
@@ -145,7 +145,64 @@
       </div>
     </section>
     <footer class="footer">
-      <img src="./assets/images/image 8.png" alt="" />
+      <div class="footer-up">
+        <div class="container d-flex justify-content-between">
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">GET HELP</h3>
+            <div class="footer-list d-flex flex-column">
+              <a href="">Contact Us</a>
+              <a href="">Shopping</a>
+              <a href="">NIKEiD</a>
+              <a href="">NIKE +</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">ORDERS</h3>
+            <div class="footer-list d-flex flex-column">
+              <a href="">Payment options</a>
+              <a href="">Shipping and delivery</a>
+              <a href="">Returns</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">REGISTER</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>
+                Create one account to manage everything you do with NIKE, from
+                your shopping preferences to your NIKE + activity.
+              </p>
+              <a href="" class="btn1">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-down">
+        <div class="container d-flex justify-content-between">
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">EMAIL SIGN UP</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>
+                Be the first to know about know products and special offers.
+              </p>
+              <a href="" class="btn1">Sign up now</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">GIFT CARDS</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>Give the gift that alway fits.</p>
+              <a href="" class="btn1">View cards</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">STORE NEAR YOU</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>Locate a NIKE retail store or authorized retailer.</p>
+              <a href="" class="btn1">Search</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
