--- a/details.html
+++ b/details.html
@@ -81,15 +81,15 @@
         <div class="detail-content">
           <h3 id="prod-name" class="fs-1"></h3>
           <p id="prod-desc" class="fs-2 fw-light"></p>
-          <p class="fs-1 text-success">Available Size</p>
+          <p class="fs-1 text-success mt-5">Available Size</p>
           <div id="prod-size" class="my-3 d-flex justify-content-between w-50"></div>
           <span id="prod-price" class="fs-1"></span>
           <div class="number-prod">
-            <button class="fs-1 px-4 btn btn-secondary">-</button>
+            <button class="fs-1 px-4 btn btn-secondary" id="down">-</button>
             <span id="number" class="fs-1 mt-3 mx-4">1</span>
-            <button class="fs-1 px-4 btn btn-secondary">+</button>
+            <button class="fs-1 px-4 btn btn-secondary" id="up">+</button>
           </div>
-          <a class="btn btn-warning fs-1">Add to cart</a>
+          <a class="btn fs-1 btn1">Add to cart</a>
         </div>
       </div>
     </section>
