--- a/details.html
+++ b/details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Details</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -43,7 +43,7 @@
             </li>
 
             <li><a href="">Login</a></li>
-            <li><a href="">Register</a></li>
+            <li><a href="./register.html">Register</a></li>
           </ul>
         </div>
       </div>
@@ -54,7 +54,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Men</a>
@@ -81,12 +81,12 @@
         <div class="detail-content">
           <h3 id="prod-name" class="fs-1"></h3>
           <p id="prod-desc" class="fs-2 fw-light"></p>
-          <p class="fs-1 text-success mt-5">Available Size</p>
+          <p class="fs-1 mt-5">Available Size</p>
           <div id="prod-size" class="my-3 d-flex justify-content-between w-50"></div>
           <span id="prod-price" class="fs-1"></span>
-          <div class="number-prod">
+          <div class="number-prod d-flex h-75">
             <button class="fs-3 px-3 btn btn-secondary" id="down">-</button>
-            <span id="number" class="fs-1 mt-3 mx-3">1</span>
+            <span id="number" class="fs-1 mx-3">1</span>
             <button class="fs-3 px-3 btn btn-secondary" id="up">+</button>
           </div>
           <a class="btn fs-1 btn1">Add to cart</a>
