--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
 
             <li><a href="">Login</a></li>
-            <li><a href="">Register</a></li>
+            <li><a href="./register.html">Register</a></li>
           </ul>
         </div>
       </div>
