--- a/register.html
+++ b/register.html
@@ -1,21 +1,244 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Register</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS v5.2.0-beta1 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <!-- font awsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- main.css -->
-    <link rel="stylesheet" href="./assets/style/main.css">
+    <link rel="stylesheet" href="./assets/style/main.css" />
   </head>
   <body>
-      sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <header class="header">
+      <div class="container d-flex justify-content-between">
+        <div class="header-logo">
+          <img src="./assets/images/image 3 .png" alt="" />
+        </div>
+        <div class="header-content">
+          <ul class="d-flex justify-content-around">
+            <li>
+              <a href=""
+                ><img src="./assets/images/image 8 (1).png" alt="" />
+                <span>(1)</span></a
+              >
+            </li>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+            <li><a href="">Login</a></li>
+            <li><a href="./register.html">Register</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <section class="menu">
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Men</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Woman</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kid</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sport</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <section class="form_wrapper">
+      <div class="form_container">
+        <form id="form_Register">
+          <div class="input_field">
+            <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+            <input
+              id="email"
+              type="email"
+              name="email"
+              placeholder="Email"
+              required
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+
+            />
+            <span class="alert_validate" id="spanEmail"></span>
+          </div>
+          <div class="input_field">
+            <span><i aria-hidden="true" class="fa fa-lock"></i></span>
+            <input
+              id="password"
+              type="password"
+              name="password"
+              placeholder="Password"
+              required
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,10}"
+
+            />
+            <span class="alert_validate" id="spanPassword"></span>
+          </div>
+          <div class="input_field">
+            <span><i aria-hidden="true" class="fa fa-lock"></i></span>
+            <input
+              id="re-password"
+              type="password"
+              name="password"
+              placeholder="Re-type Password"
+              required
+            />
+            <span class="alert_validate" id="spanRePassword"></span>
+          </div>
+          <div class="input_field">
+            <span><i aria-hidden="true" class="fa fa-user"></i></span>
+            <input
+              id="name"
+              type="text"
+              name="name"
+              placeholder="Name"
+              required
+              pattern="[A-Za-zÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚĂĐĨŨƠàáâãèéêìíòóôõùúăđĩũơƯĂẠẢẤẦẨẪẬẮẰẲẴẶẸẺẼỀỀỂưăạảấầẩẫậắằẳẵặẹẻẽềếểỄỆỈỊỌỎỐỒỔỖỘỚỜỞỠỢỤỦỨỪễệỉịọỏốồổỗộớờởỡợụủứừỬỮỰỲỴÝỶỸửữựỳỵỷỹ ]+"
+            />
+            <span class="alert_validate" id="spanName"></span>
+          </div>
+          <div class="input_field">
+            <span><i aria-hidden="true" class="fa fa-phone"></i></span>
+            <input
+              id="phone"
+              type="text"
+              name="phone"
+              placeholder="Phone"
+              required
+              pattern="([+]+84|0[3|5|7|8|9])+([0-9]{8})\b"
+            />
+            <span class="alert_validate" id="spanPhone"></span>
+          </div>
+          <div class="input_field radio_option" id="genderOption">
+            <h2 class="fs-2 mb-4">Gender</h2>
+            <input
+              type="radio"
+              name="radiogroup1"
+              id="rd1"
+              value="true"
+              checked
+            />
+            <label for="rd1">Male</label>
+            <input type="radio" name="radiogroup1" id="rd2" value="false" />
+            <label for="rd2">Female</label>
+          </div>
+
+          <button class="button" id="btn-register" type="button">
+            REGISTER
+          </button>
+        </form>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-up">
+        <div class="container d-flex justify-content-between">
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">GET HELP</h3>
+            <div class="footer-list d-flex flex-column">
+              <a href="">Contact Us</a>
+              <a href="">Shopping</a>
+              <a href="">NIKEiD</a>
+              <a href="">NIKE +</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">ORDERS</h3>
+            <div class="footer-list d-flex flex-column">
+              <a href="">Payment options</a>
+              <a href="">Shipping and delivery</a>
+              <a href="">Returns</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">REGISTER</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>
+                Create one account to manage everything you do with NIKE, from
+                your shopping preferences to your NIKE + activity.
+              </p>
+              <a href="" class="btn1">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-down">
+        <div class="container d-flex justify-content-between">
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">EMAIL SIGN UP</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>
+                Be the first to know about know products and special offers.
+              </p>
+              <a href="" class="btn1">Sign up now</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">GIFT CARDS</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>Give the gift that alway fits.</p>
+              <a href="" class="btn1">View cards</a>
+            </div>
+          </div>
+          <div class="footer-items">
+            <h3 class="fw-bold mb-4">STORE NEAR YOU</h3>
+            <div class="footer-list d-flex flex-column">
+              <p>Locate a NIKE retail store or authorized retailer.</p>
+              <a href="" class="btn1">Search</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+      integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+      crossorigin="anonymous"
+    ></script>
+    <!-- axios -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"
+      integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- modals -->
+    <script src="./models/user.js"></script>
+    <!-- index.js -->
+    <script type="module" src="./controller/register.js"></script>
   </body>
 </html>
